# 2025_OUC_MUDGAME

./: CMakeLists.txt  Class item  README.md  build.bat  config.toml  ssss
.github/workflows/: cmake-test.yml
src/game/main/: main.cpp
src/game/main/GameStory/: DialogRegistry.h  GameProcess.h  Story.h
src/game/main/GameStory/Story/: chapter1.h
src/game/main/basic/: Configuration.cpp  Configuration.h  Dialog.cpp  Dialog.h  Game.cpp  Game.h  GameTime.cpp  GameTime.h  InputProcess.h  PlayerService.cpp  PlayerService.h  SaveClass.cpp  SaveClass.h  SceneBase.cpp  SceneBase.h  SceneManager.cpp  SceneManager.h  StoryController.cpp  StoryController.h  Terminal.cpp  Terminal.h  Types.h  View.cpp  View.h
src/game/main/basic/ui/: Bag.cpp  Bag.h  BagLayout.cpp  BagLayout.h  GameLayout.cpp  GameLayout.h  MapLayout.cpp  MapLayout.h  PhoneLayout.cpp  PhoneLayout.h
src/game/main/class/entity/: Enemy.cpp  Enemy.h  NPC.cpp  NPC.h  Player.cpp  Player.h
src/game/main/class/entity/player/: Player.cpp  Player.h
src/game/main/class/item/: AbstractItem(1).h  AbstractItem.cpp  AbstractItem.h  Food(1).h  Food.cpp  Food.h  Fridge.cpp  Fridge.h  Medicine.cpp  Medicine.h
src/game/main/class/skill/: Skill.cpp  Skill.h
src/game/main/scene/: StartScene.cpp  StartScene.h
